# p1-bargain

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  settings.conf  valgrind-out.txt
.github/workflows/: clang-tidy.yml  cmake-tests.yml  cmake.yml  linting.yml  memleak-test.yml
fetch/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/curl-7.86.0/docs/libcurl/opts/: CURLOPT_SOCKOPTFUNCTION.3:Zone.Identifier
libraries/curl-7.86.0/lib/vtls/: openssl.c
libraries/curl-t-2/: CMakeLists.txt
src/: CMakeLists.txt  bargain.c  bargain.h  basket.c  basket.h  basket_test.c  calc.c  calc.h  calc_test.c  config.c  config.h  items.c  items.h  items_types.h  main.c  menu.c  menu.h  mock_functions.c  settings.c  settings.conf  settings.h  stores.c  stores.h  test_assert.h  test_bargain.c  test_bargain.h  test_config.c  test_functions.c  test_functions.h  test_items.c  test_items.h  test_settings.c
src/api/: CMakeLists.txt  api-lookup.js  fetch.c  fetch.h  fetch_main.c  fetch_test.c  parse.c  parse.h  parse_test.c  salling-token.txt  tokens.conf
src/bargain/: CMakeLists.txt  bargain.c  bargain.h  test_bargain.c
